src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>AddressLineOne__c</fullName>
        <encrypted>true</encrypted>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLineThree__c</fullName>
        <encrypted>true</encrypted>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLineTwo__c</fullName>
        <encrypted>true</encrypted>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressUsageValue__c</fullName>
        <description>Primary residence is brought up to the contact.  All other types are not.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCOA Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encrypted>true</encrypted>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <description>This will be sent back to Salesforce if MDM encounters an error. It is a concatenation of the SF Id and Last Modified Date Time.</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TEXT(LastModifiedDate), &apos;Z&apos;, &apos;.&apos; + MID(TEXT(MOD(MOD(LastModifiedDate - $System.OriginDateTime, 1), 86400)), 3, 3)),&apos;-&apos;,&apos;&apos;),&apos;:&apos;,&apos;&apos;),&apos; &apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;)</formula>
        <label>Correlation Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryValue__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_from_New_contact_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from New contact Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocationGroupLastUpdateDate__c</fullName>
        <label>LocationGroupLastUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocationGroupLastUpdateUser__c</fullName>
        <label>LocationGroupLastUpdateUser</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvinceStateValue__c</fullName>
        <label>Province / State</label>
        <picklist>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SourceIdentifierValue__c</fullName>
        <label>SourceIdentifierValue</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UCID__c</fullName>
        <externalId>true</externalId>
        <label>UCID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueString__c</fullName>
        <label>ValueString</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipPostalCode__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>Please enter a Postal Code / Zip Code without any spaces.</inlineHelpText>
        <label>Postal / Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Addr-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Create_or_Update_Address</fullName>
        <active>true</active>
        <description>Cannot create or update Address</description>
        <errorConditionFormula>NOT(BEGINS($Profile.Name, &quot;API -&quot;)) &amp;&amp;  Not(ISPICKVAL( AddressUsageValue__c ,&apos;PRIMARY RESIDENCE&apos;)) &amp;&amp;  NOT( ISBLANK( Contact__r.Id) ) &amp;&amp;(ISBLANK(Contact__r.Phone) &amp;&amp;  ISBLANK(Contact__r.Email) &amp;&amp;  ISBLANK(Contact__r.MailingCity) &amp;&amp; ISBLANK(Contact__r.MailingCountry))</errorConditionFormula>
        <errorMessage>Cannot create or update Address if a contact does not have a primary Address, a primary email, or a primary phone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_is_greater_than_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(BEGINS($Profile.Name, &quot;API -&quot;)), StartDate__c &gt; EndDate__c )</errorConditionFormula>
        <errorMessage>Start Date cannot be greater than End Date</errorMessage>
    </validationRules>
</CustomObject>